# OpenGL-cpp

./: CMakeLists.txt  README.md
include/: openGL_cpp.h
src/draw/: draw.cpp  draw.h
src/kit/: kit.cpp  kit.h
src/object/: base_object.h  base_shader.cpp  base_shader.h  base_vertex_buffer.h  dynamic_vertex_buffer.cpp  dynamic_vertex_buffer.h  fragment_shader.cpp  fragment_shader.h  index_buffer.cpp  index_buffer.h  program.cpp  program.h  shader_error.cpp  shader_error.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h  vertex_shader.cpp  vertex_shader.h
src/system/: enum.h  error.h  mat.h  system.cpp  system.h  type.h
src/window/: window.cpp  window.h
